# pension-calculator

./: .gitignore copy  README.md
.github copy/workflows/: ci.yml  deploy.yml
.github/workflows/: ci.yml  deploy.yml
backend/: Procfile  pyproject.toml
backend/src/pension_api/: main.py
backend/src/pension_api/core/: config.py  exceptions.py
backend/src/pension_api/models/: errors.py  requests.py  responses.py
backend/src/pension_api/routers/: health.py  pension.py
backend/src/pension_api/services/: calculator.py  goal_calculator.py
backend/tests/: conftest.py  test_api.py  test_calculator.py  test_goal_calculator.py  test_validation.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/components/charts/: PensionGrowthChart.jsx
frontend/src/components/common/: Button.jsx  Card.jsx  Input.jsx
frontend/src/components/forms/: PensionForm.jsx
frontend/src/components/results/: PensionResults.jsx
frontend/src/pages/: Home.jsx
frontend/src/schemas/: pensionSchema.js
frontend/src/services/: pensionService.js
frontend/src/styles/: fonts.css
frontend/src/utils/: form.js  formatters.js
